tests/NormalTests/paczka1/small_fuzzy/80477654.err
Error in line 1: ayP S754 32,3
Error in line 9: zaxwXtIYFh A734 77,4
